add delete th to index.html file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 
         <div>
+
+            <!-- input fields -->
+            
             <input id="nameIn" type="text" placeholder="First Name">
             <input id="lastNameIn" type="text" placeholder="Last Name">
             <input id="idIn" type="number" placeholder="ID">
@@ -39,6 +42,7 @@
 
 
         <div>
+            <!-- table to store Employees -->
             <table class="table table-sm">
 
                 <thead>
@@ -51,11 +55,16 @@
 
                     </tr>
                 </thead>
+
+                <!-- append the Employees -->
+
                 <tbody id="empAppend">
 
                 </tbody>
             </table>
         </div>
+
+        <!-- append the total cost -->
 
         <div id="costIn"></div>
 
