add delete th to table.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div>
 
             <!-- input fields -->
-            
-            <input id="nameIn" type="text" placeholder="First Name">
-            <input id="lastNameIn" type="text" placeholder="Last Name">
-            <input id="idIn" type="number" placeholder="ID">
-            <input id="titleIn" type="text" placeholder="Title">
-            <input id="annualSalaryIn" type="number" placeholder="annual salary">
+
+            <input id="nameIn" type="text" placeholder="First Name"/>
+            <input id="lastNameIn" type="text" placeholder="Last Name"/>
+            <input id="idIn" type="number" placeholder="ID"/>
+            <input id="titleIn" type="text" placeholder="Title"/>
+            <input id="annualSalaryIn" type="number" placeholder="annual salary"/>
             <button id="submitBtn">Submit</button>
         </div>
 
@@ -45,6 +45,7 @@
             <!-- table to store Employees -->
             <table class="table table-sm">
 
+            <!-- thead allow to add table heading <th></th>. These value will not change -->
                 <thead>
                     <tr>
                         <th>Fist Name</th>
@@ -52,6 +53,7 @@
                         <th>ID</th>
                         <th>Title</th>
                         <th>Annual Salary</th>
+                        <th>Delete</th>
 
                     </tr>
                 </thead>
